# rpy2

./: .docker-repository.yml  .hgignore  .hgtags  .travis.yml  AGPL_LICENSE.txt  AUTHORS  Dockerfile  INSTALL_WINDOWS  MANIFEST.in  NEWS  README  README.md  README.rst  bitbucket-pipelines.yml  conda_environment.yml  install_r_packages.r  pyproject.toml  readthedocs.yml  requirements.txt  requirements.types.txt  run_linting.sh  run_tests.sh  setup.cfg  setup.py  test.py
debian/: changelog  control  copyright  python-rpy2.lintian-overrides  rules  watch
demos/: example01.py  radmin.py
doc/: Makefile  appendix.rst  callbacks.rst  changes.rst  conda_environment.yml  conf.py  getting-started.rst  graphicaldevices.rst  graphics.rst  high-level.rst  index.rst  interactive.rst  introduction.rst  lib_dplyr.rst  make.bat  miscellaneous.rst  notebooks.rst  numpy.rst  overview.rst  pandas.rst  performances.rst  porting-to-rpy2.rst  related_projects.rst  requirements.txt  rhelp.rst  rinterface-memorymanagement.rst  rinterface.rst  robjects.rst  robjects_convert.rst  robjects_environments.rst  robjects_formulae.rst  robjects_functions.rst  robjects_language.rst  robjects_oop.rst  robjects_rinstance.rst  robjects_rpackages.rst  robjects_serialization.rst  rpy.texi  rpy_classic.rst  server.rst  (+1 more)
docker/: README.md
rinterface/: rinterface.c
robjects/: __init__.py
rpy/: __init__.py  _rinterface_cffi_build.py  rinterface.py  rpy_classic.py  situation.py  tests.py  tests_rpy_classic.py
rpy2/: __init__.py  _rinterface_cffi_build.py  pyproject.toml  rinterface.py  situation.py  test.py  tests.py  tests_rpy_classic.py
rpy2-rinterface/: README.rst  pyproject.toml  setup.py
rpy2-rinterface/src/rpy2/: _rinterface_cffi_build.py
rpy2-rinterface/src/rpy2/rinterface/: __init__.py
rpy2-rinterface/src/rpy2/rinterface/tests/: test_bufferprotocol.py  test_callbacks.py  test_conversion.py  test_environment.py  test_externalptr.py  test_functions.py  test_noinitialization.py  test_openrlib.py  test_sexp.py  test_symbol.py  test_threading.py  test_vector_bool.py  test_vector_float.py  test_vector_lang.py  test_vector_list.py  test_vector_numpy.py  test_vector_str.py  utils.py
rpy2-rinterface/src/rpy2/rinterface/tests/rlike/: test_container.py  test_functional.py
rpy2-rinterface/src/rpy2/rinterface_lib/: RPY2.h  R_API.h  R_API_eventloop.c  R_API_eventloop.h  Rcomplex.h  Rcomplex_legacy.h  __init__.py  _bufferprotocol.c  _rinterface_capi.py  _rinterface_cffi_build.py  bufferprotocol.py  callbacks.py  conversion.py  embedded.py  embedded_mswin.py  ffi_proxy.py  openrlib.py  sexp.py
rpy2-rinterface/src/rpy2/rlike/: __init__.py  container.py  functional.py
rpy2-rinterface/src/rpy2/situation/: __init__.py  __main__.py
rpy2-robjects/: README.rst  pyproject.toml
rpy2-robjects/src/rpy2/ipython/: rmagic.py
rpy2-robjects/src/rpy2/ipython/tests/: test_html.py  test_rmagic.py
rpy2-robjects/src/rpy2/robjects/: __init__.py  conversion.py  environments.py  help.py  language.py  numpy2ri.py  packages.py  packages_utils.py  pandas2ri.py  robject.py  vectors.py  version.py
rpy2-robjects/src/rpy2/robjects/lib/: dbplyr.py  dplyr.py  ggplot2.py  grdevices.py  tidyr.py
rpy2-robjects/src/rpy2/robjects/tests/robjects/: test_array.py  test_conversion.py  test_conversion_numpy.py  test_dataframe.py  test_methods.py  test_packages.py  test_pandas_conversions.py  test_robjects.py  test_translated_function.py  test_vector.py  test_vector_extractdelegator.py  test_vector_factor.py
rpy2-robjects/src/rpy2/robjects/tests/robjects/lib/: test_ggplot2.py  test_tidyr.py
rpy2/interactive/: ipython.py
rpy2/ipython/: ggplot.py  html.py  rmagic.py
rpy2/rinterface/: _rinterface.c  embeddedr.h  sequence.c  sexp.h
rpy2/rinterface_lib/: RPY2.h  R_API.h  R_API_eventloop.c  R_API_eventloop.h  _bufferprotocol.c  _rinterface_capi.py  bufferprotocol.py  callbacks.py  conversion.py  embedded.py  embedded_mswin.py  ffi_proxy.py  memorymanagement.py  na_values.py  openrlib.py  sexp.py
rpy2/rlike/: container.py  indexing.py
rpy2/robjects/: __init__.py  conversion.py  environments.py  functions.py  help.py  language.py  methods.py  numpy2ri.py  packages.py  packages_utils.py  pandas2ri.py  robject.py  vectors.py
rpy2/robjects/lib/: dbplyr.py  dplyr.py  ggplot2.py  grdevices.py  grid.py  tidyr.py
rpy2/robjects/tests/: testPandasConversions.py  testVector.py
rpy2/tests/: __init__.py  test_rmagic.py  utils.py
rpy2/tests/ipython/: test_ggplot.py  test_html.py  test_rmagic.py
rpy2/tests/rinterface/: test_callbacks.py  test_embedded_r.py  test_endr.py  test_environment.py  test_externalptr.py  test_functions.py  test_noinitialization.py  test_openrlib.py  test_sexp.py  test_threading.py  test_vector_int.py  test_vector_lang.py  test_vector_pairlist.py  test_vector_str.py  test_vectors.py
rpy2/tests/rlike/: test_container.py
rpy2/tests/robjects/: test_array.py  test_conversion.py  test_conversion_numpy.py  test_dataframe.py  test_environment.py  test_function.py  test_help.py  test_language.py  test_packages.py  test_packages_utils.py  test_pandas_conversions.py  test_robjects.py  test_rs4.py  test_serialization.py  test_vector.py  test_vector_datetime.py  test_vector_factor.py
rpy2/tests/robjects/lib/: test_dbplyr.py  test_dplyr.py  test_ggplot2.py  test_grdevices.py  test_grid.py  test_tidyr.py
scripts/: R_run.bat  extract_dependency.py  run_linting.sh  run_linting_rinterface.sh  run_linting_robjects.sh  run_mypy.sh  run_mypy_rinterface.sh  run_mypy_robjects.sh  run_test_ipython.sh  run_test_min_deps.sh  run_test_numpy.sh  run_test_pandas.sh  run_test_rdeps.sh  run_test_rinterface_min_deps.sh  run_test_robjects_min_deps.sh  run_tests.sh  test_drone.io.sh
tests/: test_callbacks.py  test_callbacks.py~  test_embedded_r.py  test_environment.py  test_externalptr.py  test_functions.py  test_functions.py~  test_na.py  test_rmagic.py  test_sexp.py  test_symbol.py  test_vector_bool.py  test_vector_byte.py  test_vector_complex.py  test_vector_float.py  test_vector_int.py  test_vector_lang.py  test_vector_list.py  (+3 more)
(+287 files in other folders)
