[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
    "packaging;platform_system=='Windows'",
]
build-backend = "setuptools.build_meta"

[project]
name = "rpy2"
description = "Meta-package for the low-level and high-level rpy2 interfaces to R."
version = "3.6.0.dev1"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPLv2+" }
authors = [{ name = "Laurent Gautier", email = "lgautier@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "rpy2-rinterface>=3.6.0.dev0",
    "rpy2-robjects>=3.6.0.dev0",
    "packaging;platform_system=='Windows'",
    "typing-extensions;python_version<'3.8'",
    "backports.zoneinfo;python_version<'3.9'"
]

[project.optional-dependencies]
doc = ['ipykernel',
       'jupytext',
       'multipledispatch',
       'nbconvert',
       'numpy',
       'pandas',
       'pygraphviz',
       'sphinx']
test_minimal = ["pytest>=8", "coverage", "pytest-cov"]
test = ["pytest", "ipython",
        "numpy>=1.26;python_version >= '3.9'", "numpy<1.26;python_version < '3.9'",
        "pandas>=1.3.5;python_version >= '3.10'", "pandas;python_version < '3.10'"]
numpy = ["numpy>=1.26;python_version >= '3.9'", "numpy<1.26;python_version < '3.9'"]
pandas = ["numpy>=1.26;python_version >= '3.9'", "numpy<1.26;python_version < '3.9'",
          "pandas>=1.3.5; python_version >= '3.10'", "pandas;python_version < '3.10'"]
types = ["mypy", "packaging", "pandas-stubs",
         "types-Pygments", "types-tzlocal"]

all = ["pytest", "ipython",
       "numpy>=1.26;python_version >= '3.9'", "numpy<1.26;python_version < '3.9'",
       "pandas>=1.3.5; python_version >= '3.10'", "pandas;python_version < '3.10'"]

[project.urls]
Homepage = "https://rpy2.github.io"
Documentation = "https://rpy2.github.io/doc.html"
Source = "https://github.com/rpy2/rpy2"
Tracker = "https://github.com/rpy2/rpy2/issue"


[tool.setuptools.packages.find]
where = ["src"]
include = ["rpy2.*"]
namespaces = true
